--- a/test-output/index.html
+++ b/test-output/index.html
@@ -153,7 +153,7 @@
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite name=&quot;RebtelTestSuite&quot; parallel=&quot;tests&quot;&gt;
+&lt;suite thread-count=&quot;1&quot; name=&quot;RebtelTestSuite&quot; parallel=&quot;tests&quot;&gt;
   &lt;listeners&gt;
     &lt;listener class-name=&quot;com.rebtel.listerners.TestNGCustomReportListener&quot;/&gt;
     &lt;listener class-name=&quot;com.rebtel.listerners.RebtelTestListener&quot;/&gt;
@@ -234,11 +234,11 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'testRebtelAssignment')
 data.setCell(0, 2, 'com.rebtel.test.MobileTest')
-data.setCell(0, 3, 44763);
+data.setCell(0, 3, 35551);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'testRebtelAssignment')
 data.setCell(1, 2, 'com.rebtel.test.MobileTest')
-data.setCell(1, 3, 34328);
+data.setCell(1, 3, 31372);
 window.suiteTableData['RebtelTestSuite']= { tableData: data, tableDiv: 'times-div-RebtelTestSuite'}
 return data;
 }
@@ -271,20 +271,20 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.rebtel.test.MobileTest</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
-                <span class="method-name">prepareBeforeTest(org.testng.TestRunner@3838b49b)</span>
+                <span class="method-name">prepareBeforeTest(org.testng.TestRunner@4c3e1ae8)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">testRebtelAssignment(TC_001_Verify_Successful_Login_in_Rebtel_App, Y, verifyUserLogin, N)</span>
-                <span class="method-start">54844 ms</span>
+                <span class="method-start">34579 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testRebtelAssignment(TC_001_Verify_Successful_Calling , Y, N, verifyCallingFunctionality)</span>
-                <span class="method-start">99607 ms</span>
+                <span class="method-start">70131 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-suite after">
                 <span class="method-name">driverCleanUp</span>
-                <span class="method-start">134008 ms</span>
+                <span class="method-start">101524 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
