--- a/test-output/old/RebtelTestSuite/methods.html
+++ b/test-output/old/RebtelTestSuite/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>RebtelTestSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="dbd9e7">  <td>18/10/20 14:17:26</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestBed.prepareBeforeTest(org.testng.ITestContext)[pri:0, instance:com.rebtel.test.MobileTest@2c0c6819]">&gt;&gt;prepareBeforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1034575222</td>   <td></td> </tr>
-<tr bgcolor="80a393">  <td>18/10/20 14:18:21</td>   <td>54840</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MobileTest.testRebtelAssignment(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.rebtel.test.MobileTest@2c0c6819]">testRebtelAssignment</td> 
-  <td>TestNG@1034575222</td>   <td></td> </tr>
-<tr bgcolor="80a393">  <td>18/10/20 14:19:06</td>   <td>99603</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MobileTest.testRebtelAssignment(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.rebtel.test.MobileTest@2c0c6819]">testRebtelAssignment</td> 
-  <td>TestNG@1034575222</td>   <td></td> </tr>
-<tr bgcolor="dbd9e7">  <td>18/10/20 14:19:40</td>   <td>134004</td> <td title="&lt;&lt;TestBed.driverCleanUp()[pri:0, instance:com.rebtel.test.MobileTest@2c0c6819]">&lt;&lt;driverCleanUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>com.rebtel.testbed.core.TestExecution.main()@2057230934</td>   <td></td> </tr>
+<tr bgcolor="b17bfc">  <td>18/10/20 20:21:38</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestBed.prepareBeforeTest(org.testng.ITestContext)[pri:0, instance:com.rebtel.test.MobileTest@743d1932]">&gt;&gt;prepareBeforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1241540285</td>   <td></td> </tr>
+<tr bgcolor="85668c">  <td>18/10/20 20:22:12</td>   <td>34577</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MobileTest.testRebtelAssignment(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.rebtel.test.MobileTest@743d1932]">testRebtelAssignment</td> 
+  <td>TestNG@1241540285</td>   <td></td> </tr>
+<tr bgcolor="85668c">  <td>18/10/20 20:22:48</td>   <td>70129</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MobileTest.testRebtelAssignment(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.rebtel.test.MobileTest@743d1932]">testRebtelAssignment</td> 
+  <td>TestNG@1241540285</td>   <td></td> </tr>
+<tr bgcolor="b17bfc">  <td>18/10/20 20:23:19</td>   <td>101522</td> <td title="&lt;&lt;TestBed.driverCleanUp()[pri:0, instance:com.rebtel.test.MobileTest@743d1932]">&lt;&lt;driverCleanUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>com.rebtel.testbed.core.TestExecution.main()@922455490</td>   <td></td> </tr>
 </table>
